# kyotod

./: .gitignore  Cargo.toml  README.md  build.rs  config_spec.toml  justfile  wallet.toml
.github/workflows/: release.yml
capnp/: server.capnp
examples/: ipc_probe.rs
proto/: service.proto
src/: client.rs  daemonize.rs  ipc.rs  lib.rs  paths.rs  server.rs  sync.rs  wallet.rs
