[package]
name = "kyotod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.configure_me]
spec = "config_spec.toml"

[dependencies]
anyhow = "1"
clap = { version="4.5.26", features = ["derive"] }
toml = { version="0.8.19" }
serde = "1.0.145"
qrcode = "0.12.0"

bdk_wallet = { version = "1.0.0", features = ["rusqlite"] }
bdk_kyoto = { version = "0.6.0" }

tonic = "0.12.3"
prost = "0.13"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync"] }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tracing-appender = { version = "0.2" }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


